--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,32 @@
-annotated-types==0.6.0
-anyio==4.3.0
-blinker==1.7.0
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-distro==1.9.0
-exceptiongroup==1.2.0
-Flask==3.0.2
-gTTS==2.5.1
-h11==0.14.0
-httpcore==1.0.3
-httpx==0.26.0
-idna==3.6
-itsdangerous==2.1.2
-Jinja2==3.1.3
-joblib==1.3.2
-MarkupSafe==2.1.5
-nltk==3.8.1
-openai==1.12.0
-pydantic==2.6.1
-pydantic_core==2.16.2
-pyTelegramBotAPI==4.15.4
-regex==2023.12.25
-requests==2.31.0
-sniffio==1.3.0
-telegram==0.0.1
-textblob==0.18.0.post0
-tqdm==4.66.2
-typing_extensions==4.9.0
-urllib3==2.2.0
-Werkzeug==3.0.1
+annotated-types
+anyio
+blinker
+certifi
+charset-normalizer
+click
+distro
+exceptiongroup
+Flask
+gTTS
+h11
+httpcore
+httpx
+idna
+itsdangerous
+Jinja2
+joblib
+MarkupSafe
+nltk
+openai
+pydantic
+pydantic_core
+pyTelegramBotAPI
+regex
+requests
+sniffio
+telegram
+textblob
+tqdm
+typing_extensions
+urllib3
+Werkzeug
